--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,10 @@
   "manifest_version": 3,
   "name": "Facebook Group Post Assistant",
   "version": "1.0",
-  "permissions": ["tabs", "scripting", "storage"],
+  "permissions": ["tabs", "scripting", "storage", "alarms", "notifications"],
+  "background": {
+    "service_worker": "background.js"
+  },
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon.png"
